--- a/src/pages/Register/styles.module.scss
+++ b/src/pages/Register/styles.module.scss
@@ -4,5 +4,5 @@
     align-items: center;
     width: 100vw;
     height: 100vh;
-    background-color: rgb(98, 96, 204);
+    background-color: #0f8cb3;
 }
